--- a/sytle.css
+++ b/sytle.css
@@ -263,3 +263,34 @@ ul.list-unstyled li a i {
     margin-top: -2px;
     margin-bottom: 10px;
 }
+
+.hero {
+    background-image: url('asset/hero-meta.jpg');
+    background-position: center;
+    background-size: cover;
+    position: relative;
+}
+
+.hero .overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5); /* Overlay gelap */
+    z-index: 1;
+}
+
+.hero .content {
+    position: relative;
+    z-index: 2;
+}
+
+.hero h1, .hero p {
+    color: #fff;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); /* Memberikan efek bayangan pada teks */
+}
+
+.hero .btn-success {
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.3); /* Menambah bayangan pada tombol */
+}
